--- a/react-experties.html
+++ b/react-experties.html
@@ -211,6 +211,17 @@
       </ul>
     </section>
 
+
+	<!-- Add External Resources HERE -->
+	  <h2>External Resources</h2>
+	  <ul>
+	    <li>
+	      <a href="https://medium.com/@faisalqayyum.se/understanding-redux-and-implementing-it-with-redux-toolkit-in-react-native-adad4a14a881" 
+		 target="_blank">
+		Understanding Redux & Redux Toolkit in React Native – Medium Article
+	      </a>
+	    </li>
+	  </ul>
     <footer>
       <p>Want this as a downloadable HTML file or a printable PDF? Reply and I’ll export it for you.</p>
       <p class="note">Good luck — practice these answers aloud and customize them with your project examples for stronger impact.</p>
