new android app Added

--- a/android-apps.html
+++ b/android-apps.html
@@ -949,6 +949,48 @@
             },
           ],
         },
+        {
+          avatar: "KR",
+          title: "Kanz Rider",
+          badge: "React Native",
+          details:
+            " Fast, safe, and affordable rides. Book your trip in seconds with Kanz Rider.",
+          tags: [
+            { type: "Store", value: "Google Play" },
+            { type: "Type", value: "Services" },
+          ],
+          links: [
+            {
+              url: "https://play.google.com/store/apps/details?id=com.trioapps.kanzrider",
+              text: "View",
+            },
+            {
+              url: "https://play.google.com/store/apps/details?id=com.trioapps.kanzrider",
+              text: "Copy Link",
+            },
+          ],
+        },
+        {
+          avatar: "KD",
+          title: "Kanz Driver",
+          badge: "React Native",
+          details:
+            " Accept ride requests, navigate easily, and earn more with Kanz Driver.",
+          tags: [
+            { type: "Store", value: "Google Play" },
+            { type: "Type", value: "Services" },
+          ],
+          links: [
+            {
+              url: "https://play.google.com/store/apps/details?id=com.trioapps.kanzdriver",
+              text: "View",
+            },
+            {
+              url: "https://play.google.com/store/apps/details?id=com.trioapps.kanzdriver",
+              text: "Copy Link",
+            },
+          ],
+        },
       ];
 
       /* SORT ALPHABETICALLY */
