server setup file  Added

--- a/android-apps.html
+++ b/android-apps.html
@@ -240,7 +240,7 @@
           avatar: "KF",
           title: "Kabs FitFactory",
           badge: "Shopify APIs",
-          details: "Fitness & e-commerce app integrated with Shopify APIs.",
+          details: "KABS FitFactory mobile application is the easiest way to shop for all your nutritional supplements needs. From protein supplements, sports nutrition products, bodybuilding supplements, health and wellness products as well as exclusive clothing lines.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Fitness / Shopping" },
@@ -260,7 +260,8 @@
           avatar: "AB",
           title: "Anshul Bijoux",
           badge: "Shopify APIs",
-          details: "Jewellery shopping app integrated with Shopify APIs.",
+          details:
+            "Shop the latest jewellery designs online with the all-new AnshulBijoux app. Easily swipe and browse through 2000+ jewellery designs, in gold plated, African Jewelry, imitation diamonds, Kaftan, Abaya and robes! Get hot offers, personalized deals on jewellery.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Jewellery / Ecommerce" },
@@ -300,7 +301,7 @@
           avatar: "JD",
           title: "Kirar Dhakad Jeevansathi",
           badge: "Flutter",
-          details: "Community matrimony app for Kirar Dhakad Samaj.",
+          details: "Hearing the sufferings of a common family member, the Kirar Dhakad Jeevan Saathi Group was formed on 23-11-2019, the rules were made, then gradually the bio-data of the society brothers started getting, and with time, changes had to be made in the bio-data and the rules and regulations.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Matrimony" },
@@ -320,7 +321,7 @@
           avatar: "KI",
           title: "Kast IPL",
           badge: "Flutter",
-          details: "Fast and easy e-commerce shopping platform.",
+          details: "KASTIPL same day delivery service believes the importance of time management is extremely important for any business or individual. KASTIPL is the biggest shopping destination for online shopping lovers. You will experience fast easy and quick e-commerce shopping here.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Shopping / Ecommerce" },
@@ -340,7 +341,7 @@
           avatar: "ZG",
           title: "Zever Galaxy",
           badge: "Flutter",
-          details: "Jewellery shopping & browsing platform.",
+          details: "Zevar Galaxy is your go-to destination for jewelry fashion. Browse and buy stunning pieces with ease. Zevar Galaxy is an app that showcases jewelry fashion, allowing users to browse and purchase exquisite pieces.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Jewellery / Ecommerce" },
@@ -360,7 +361,7 @@
           avatar: "SB",
           title: "SevBazaar",
           badge: "Flutter",
-          details: "Order Sev & Namkeen from your favorite shops.",
+          details: "India's Largest Sev Namkeen Bazaar Don't miss your favorite shop's Sev & Namkeen anymore!! This App will help you order any type of Sev & Namkeen across India.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Food / Marketplace" },
@@ -380,7 +381,7 @@
           avatar: "RT",
           title: "Ranka Tent",
           badge: "Flutter",
-          details: "Find wedding & event decorative items.",
+          details: "Ranka Tent App will help you to find all the the wedding, events decorative items .like artical, ceiling, parde, canopy, mandap, chair covers, kanthe, table, table freel, steel chair & sofa, maharaja chair, wedding gate, stage, doli, passage. You can do direct inquiry of any product and also you can give feedback. ",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Events / Shopping" },
@@ -400,7 +401,7 @@
           avatar: "LM",
           title: "Leave Management",
           badge: "Flutter",
-          details: "Employee leave tracking, requests and approvals.",
+          details: "Allow employees to apply for leave through a user-friendly interface. Effectively manage employee leave requests, including approvals and rejections, ensuring smooth workflow and adherence to company policies. Keep comprehensive records of employee leave, including types of leave taken, duration, and reasons, to facilitate accurate tracking and reporting for HR and payroll purposes.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Business / HR" },
@@ -420,7 +421,7 @@
           avatar: "BM",
           title: "Bharat Mapping",
           badge: "Flutter",
-          details: "Track Kshetras, Karyakartas & Sangh network across India.",
+          details: "Bharat Mapping app aimed to keep the track of Sangh Kshetras and Karyakartas across the country, as every year the number of Sangh Kshetras, Mandals, Shakhas, and Karyakartas increases.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Mapping / Community" },
@@ -440,7 +441,7 @@
           avatar: "SD",
           title: "Sewadata",
           badge: "Flutter",
-          details: "Hire skilled service technicians for home repairs.",
+          details: "A skilled person has to find the work, while a common man has to find the right person for the smaller tasks. This innovative experiment of Seva Bharati Malwa province can help bridge this gap.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Services" },
@@ -460,7 +461,7 @@
           avatar: "UC",
           title: "Unit Converter",
           badge: "Flutter",
-          details: "Convert area units instantly (sq ft, acres, hectares).",
+          details: "This fantastic UNIT CONVERTER APP would be a great addition to your smartphone. Embedded with 15+ tools, this app has been particularly designed and built by specialists to make your life easier.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Tools" },
@@ -480,7 +481,7 @@
           avatar: "SD",
           title: "Sewadisha",
           badge: "Flutter",
-          details: "Community & social support platform.",
+          details: "Large numbers of Seva Karyas are being run throughout the country through the inspiration of Rashtriya Swayamsevak Sangh. The number of Seva Karayas and their diversity is also increasing every year....",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Community" },
@@ -500,7 +501,7 @@
           avatar: "MF",
           title: "Motivfit Fitness",
           badge: "Flutter",
-          details: "Fitness + social media platform for gym lovers.",
+          details: "Motivfit app is a simple to use training app with social media features.Motivfit app is a simple to use training app with social media features.Our aim is to create a community of avid gym goers, strength and hypertrophy trainers, as well as general fitness enthusiasts that motivate each other to become the best version of ourselves.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Fitness / Social" },
@@ -520,7 +521,7 @@
           avatar: "FG",
           title: "Fitgrit",
           badge: "Flutter",
-          details: "Find fitness partners with similar goals.",
+          details: "Find Fitness friends nearby with the same fitness interests. A free app to Match and Communicate with people nearby who have similar fitness interest.",
           tags: [
             { type: "Store", value: "APKPure" },
             { type: "Type", value: "Fitness / Social" },
@@ -540,18 +541,19 @@
           avatar: "AT",
           title: "Apna Tailor",
           badge: "React Native",
-          details: "Find skilled tailors for custom clothing.",
+          details:
+            "In today's fast-paced world, staying ahead in the tailoring business requires more than just needle and thread. It demands a digital presence and efficient management of orders, something that traditional tailors have been longing for.",
           tags: [
-            { type: "Store", value: "APKPure" },
+            { type: "Store", value: "Google Play" },
             { type: "Type", value: "Tailoring / Services" },
           ],
           links: [
             {
-              url: "https://apkpure.com/apna-tailor/com.apna.tailorapp",
+              url: "https://play.google.com/store/apps/details?id=com.apna.tailorapp",
               text: "View",
             },
             {
-              url: "https://apkpure.com/apna-tailor/com.apna.tailorapp",
+              url: "https://play.google.com/store/apps/details?id=com.apna.tailorapp",
               text: "Copy Link",
             },
           ],
@@ -560,7 +562,8 @@
           avatar: "AC",
           title: "Apna Tailor Customer",
           badge: "React Native",
-          details: "Customer-side app for custom tailoring orders.",
+          details:
+            "In today's world of convenience, turning that perfect fabric into a stunning dress can be quite challenging. The real hurdle is finding a skilled dressmaker to bring your fashion vision to life.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Customer App" },
@@ -580,7 +583,8 @@
           avatar: "AD",
           title: "Apna Tailor Delivery",
           badge: "React Native",
-          details: "Pickup and delivery of tailoring orders.",
+          details:
+            "Apna Tailor Delivery App is for our delivery agents. The delivery agents need to install the application and using the application they will receive new orders to pick up from both the customers and tailors.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Delivery / Services" },
@@ -639,7 +643,7 @@
           title: "Bharat Propertys",
           badge: "React Native",
           details:
-            "Your all-in-one real estate app for buying, selling, and renting properties across India.",
+            " Relationship Management (CRM) is a way for businesses to keep track of all the information about their customers and interactions with them.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Real Estate" },
@@ -681,7 +685,7 @@
           title: "Bharat Property CRM & Customer",
           badge: "React Native",
           details:
-            "Seamless property CRM app to connect customers, agents, and developers in one place.",
+            "Customer Relationship Management (CRM) is a way for businesses to keep track of all the information about their customers and interactions with them.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Real Estate" },
@@ -702,7 +706,7 @@
           title: "Art On Click: Learn Art",
           badge: "React Native",
           details:
-            "Interactive platform to learn, practice, and explore different forms of art online.",
+            "Whether you're passionate about dance, music, theatre, painting, or any other art form, find the right classes and expert teachers near you in just a few clicks.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Education" },
@@ -765,7 +769,7 @@
           title: "Bharatiya Cinema",
           badge: "React Native",
           details:
-            "An app to discover, view, and enjoy a variety of Indian cinema content with curated selections and features.",
+            "Dive into a vibrant collection of movies, entertainment programs, and videos designed for Indian cinema enthusiasts. Bhartiya Cinema is a comprehensive platform where you can explore, engage, and even create content.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Cinema" },
@@ -807,7 +811,7 @@
           title: "Chanchal Milk: Online Delivery",
           badge: "React Native",
           details:
-            "Order, subscribe & recharge your wallet to get daily milk items.",
+            "Chanchal Milk: Online Delivery.Chanchal Milk Guarantee to you:Contactless delivery Reliability Purity - Freshness you can trust & guaranteed Convenience Choose a wide range of fresh milk",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Services" },
@@ -954,7 +958,7 @@
           title: "Kanz Rider",
           badge: "React Native",
           details:
-            " Fast, safe, and affordable rides. Book your trip in seconds with Kanz Rider.",
+            "Kanz Rider is a modern ride-hailing app designed to offer fast, reliable, and affordable transportation anytime, anywhere. Whether you're heading to work, meeting friends, or traveling across the city, Kanz Rider connects you with nearby drivers in seconds.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Services" },
@@ -975,7 +979,7 @@
           title: "Kanz Driver",
           badge: "React Native",
           details:
-            " Accept ride requests, navigate easily, and earn more with Kanz Driver.",
+            " Accept ride requests, navigate easily, and earn more with Kanz Driver.Kanz Driver is a modern ride-provier app designed to offer fast, reliable, and affordable transportation anytime.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Services" },
@@ -996,7 +1000,7 @@
           title: "Schoolware-Teacher App",
           badge: "React Native",
           details:
-            " Schoolware - Teacher App empowers educators to manage daily school tasks effortlessly and stay connected with students and parents in real time.",
+            " Schoolware - Teacher App empowers educators to manage daily school tasks effortlessly and stay connected with students and parents in real time.Built for modern classrooms, the app simplifies teaching saving time and enhancing productivity.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "education" },
@@ -1033,12 +1037,11 @@
             },
           ],
         },
-         {
+        {
           avatar: "RSS",
           title: "Rss Malwa Prant",
           badge: "React Native",
-          details:
-            "Suchi menu with Swayamsevak, Toli and Karyakarni lists.",
+          details: "RSS Malwa Prant is a dedicated work reporting application designed for the seamless tracking and reporting of Shakha activities across Malwa Prant. With a large number of Shakhas running throughout the region and the increasing participation of Swayamsevaks.",
           tags: [
             { type: "Store", value: "Google Play" },
             { type: "Type", value: "Community" },
