--- a/ocean.html
+++ b/ocean.html
@@ -171,6 +171,7 @@
         <button class="filter-btn" onclick="applyFilter('backend')">Backend</button>
         <button class="filter-btn" onclick="applyFilter('server')">DevOps</button>
         <button class="filter-btn" onclick="applyFilter('ssl')">SSL</button>
+        <button class="filter-btn" onclick="applyFilter('server')">server</button>
     </div>
 
     <div id="cardsContainer"></div>
@@ -247,6 +248,12 @@ let projectLinks = [
         desc: "Steps for SSL certificate setup.",
         url: "https://pssinhasaitpark.github.io/ocean/ssl-setup",
         tags: ["ssl", "security"]
+    },
+    {
+        title: "server Setup Guide",
+        desc: "Steps for server setup.",
+        url: "https://pssinhasaitpark.github.io/ocean/server-setup",
+        tags: ["server", "security"]
     }
 ];
 
