--- a/app-feature-demos.html
+++ b/app-feature-demos.html
@@ -178,7 +178,9 @@
   </head>
   <body>
     <header>
-      <p>Discover intuitive app workflows through detailed feature demonstrations</p>
+      <p>
+        Discover intuitive app workflows through detailed feature demonstrations
+      </p>
     </header>
 
     <div class="controls">
@@ -411,6 +413,41 @@
           <a
             class="btn"
             href="https://drive.google.com/file/d/1pxmh25voUpg-YGLzIefSujzHhiLKl20m/view"
+            target="_blank"
+            >Open</a
+          >
+        </div>
+      </div>
+      <!-- 8 -->
+      <div class="card">
+        <div class="thumbnail">
+          <img
+         src="https://drive.google.com/thumbnail?id=1JuvdCWxRQ0hNLQZhv7wSopZcnZ8Z-Tlv"
+            alt="Video 8 Thumbnail"
+          />
+        </div>
+        <h3>
+          mHomeService – Beauty & Wellness at Home<span class="badge"
+            >Video</span
+          >
+        </h3>
+        <p class="details">
+          Get professional beauty and wellness services at your doorstep. From
+          makeup, facials, manicures & pedicures to spa treatments, mHomeService
+          brings expert care to your home.
+        </p>
+        <div class="tags">
+          <span class="tag">Type: Video</span>
+        </div>
+        <div class="btn-group">
+          <a
+            class="btn"
+            onclick="copyLink('https://drive.google.com/file/d/1JuvdCWxRQ0hNLQZhv7wSopZcnZ8Z-Tlv/view')"
+            >Copy Link</a
+          >
+          <a
+            class="btn"
+            href="https://drive.google.com/file/d/1JuvdCWxRQ0hNLQZhv7wSopZcnZ8Z-Tlv/view"
             target="_blank"
             >Open</a
           >
