IOS Kanz Driver and Rider App Added

--- a/android-apps.html
+++ b/android-apps.html
@@ -956,7 +956,7 @@
         {
           avatar: "KR",
           title: "Kanz Rider",
-          badge: "React Native",
+          badge: "Flutter",
           details:
             "Kanz Rider is a modern ride-hailing app designed to offer fast, reliable, and affordable transportation anytime, anywhere. Whether you're heading to work, meeting friends, or traveling across the city, Kanz Rider connects you with nearby drivers in seconds.",
           tags: [
@@ -974,10 +974,11 @@
             },
           ],
         },
+        
         {
           avatar: "KD",
           title: "Kanz Driver",
-          badge: "React Native",
+          badge: "Flutter",
           details:
             " Accept ride requests, navigate easily, and earn more with Kanz Driver.Kanz Driver is a modern ride-provier app designed to offer fast, reliable, and affordable transportation anytime.",
           tags: [
