Sanjeevanihub android App Added

--- a/android-apps.html
+++ b/android-apps.html
@@ -1079,6 +1079,27 @@
             },
           ],
         },
+        {
+          avatar: "SH",
+          title: "SANJEEVANIHUB",
+          badge: "React Native",
+          details:
+            "Hassle-free personal needs booking for doctors and nurses. Best monthly discounts and discreet, door delivery.",
+          tags: [
+            { type: "Store", value: "Google Play" },
+            { type: "Type", value: "Services" },
+          ],
+          links: [
+            {
+              url: "https://play.google.com/store/apps/details?id=com.console.billing",
+              text: "View",
+            },
+            {
+              url: "https://play.google.com/store/apps/details?id=com.console.billing",
+              text: "Copy Link",
+            },
+          ],
+        },
       ];
 
       /* SORT ALPHABETICALLY */
